reports mongo connection settings

--- a/People/appsettings.Development.json
+++ b/People/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PostgreSQL": "User ID=root;Password=myPassword;Host=localhost;Port=5432;Database=People;",
+    "RabbitMQ": "amqps://ncocubce:Zlv-eKkXTpI1PAafqYwDDXDyO9yPkz62@shrimp.rmq.cloudamqp.com/ncocubce"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
