--- a/Reports/appsettings.Development.json
+++ b/Reports/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "RabbitMQ": "amqps://ncocubce:Zlv-eKkXTpI1PAafqYwDDXDyO9yPkz62@shrimp.rmq.cloudamqp.com/ncocubce"
+  },
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb+srv://firat:parola123@cluster0.b5x1o.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "risetech"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
