postgres connection and people endpoint test

--- a/People/appsettings.Development.json
+++ b/People/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQL": "User ID=root;Password=myPassword;Host=localhost;Port=5432;Database=People;",
+    "PostgreSQL": "User ID=postgres;Password=gunkom33;Host=localhost;Port=5432;Database=People;",
     "RabbitMQ": "amqps://ncocubce:Zlv-eKkXTpI1PAafqYwDDXDyO9yPkz62@shrimp.rmq.cloudamqp.com/ncocubce"
   },
   "Logging": {
