--- a/.editorconfig
+++ b/.editorconfig
@@ -27,6 +27,9 @@ csharp_style_expression_bodied_local_functions = false:silent
 # CS8602: Dereference of a possibly null reference.
 dotnet_diagnostic.CS8602.severity = none
 
+# CS8622: Nullability of reference types in type of parameter doesn't match the target delegate (possibly because of nullability attributes).
+dotnet_diagnostic.CS8622.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
