--- a/Reports/appsettings.Development.json
+++ b/Reports/appsettings.Development.json
@@ -3,7 +3,7 @@
     "RabbitMQ": "amqps://ncocubce:Zlv-eKkXTpI1PAafqYwDDXDyO9yPkz62@shrimp.rmq.cloudamqp.com/ncocubce"
   },
   "MongoDBSettings": {
-    "ConnectionString": "mongodb+srv://firat:parola123@cluster0.b5x1o.mongodb.net/?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb+srv://firat:parola@cluster0.b5x1o.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "risetech"
   },
   "Logging": {
